fix wrap css

--- a/css/wrap.css
+++ b/css/wrap.css
@@ -11,10 +11,12 @@
 }
 
 .content_category {
-    position: absolute;
+    position: sticky;
+    left: 0;
+    top: 0;
     width: 100%;
     min-width: 1170px;
-    z-index: 10;
+    z-index: 3;
 }
 .content_category ul {
     font-size: 0;
@@ -104,7 +106,7 @@
 .wrap h2{
     font-size: 70px;
     font-family: 'sw_f';
-    padding: 104px 0 21px 0;
+    padding: 50px 0 21px 0;
     position: relative;
     z-index: 10;
 }
